implemented agent, actor and critics
