# app/api/buffer/__init__.py
@@ -1,4 +1,13 @@
-from app.model.buffer import reset_buffer
+from app.model.buffer import reset_buffer, get_buffer_sample
+from app.model.response import Response
+
 
 def reset():
-    return reset_buffer()
+    reset_buffer()
+    return Response("memory buffer data was deleted").__dict__
+
+
+def get_sample(batch_size=32):
+    used_batch_size, states, actions, rewards, new_states, are_done = get_buffer_sample(batch_size)
+    return {"states": states.tolist(), "actions": actions.tolist(), "rewards": rewards.tolist(),
+            "new_states": new_states.tolist(), "are_done": are_done.tolist()}
