# app/api/settings/__init__.py
@@ -6,3 +6,7 @@ def set_buffer(body):
     save_buffer_settings(**body)
     buffer_settings = get_buffer_settings()
     return buffer_settings.__dict__
+
+
+def get_buffer():
+    return get_buffer_settings().__dict__
